# robocup

./: .gitignore  .gitignore (1)  .swp  CMakeCache.txt  CMakeLists (1).txt  CMakeLists.txt  LICENSE  README.md  TODO.txt  configure  credentials.txt  out.txt  recompile.sh  run.sh  t
files/: camera mount 2021.stl  camera mount 2022 V1.stl  robot chassis 2022_v1.stl
files/DualI2CCounter/: DualI2CCounter.json  PCB_DualI2CCounter.json  info
files/Old STLs (2021)/: chassis.stl  funnel (gripping mechanism for victims).stl  funnel adapter.stl  servo mount.stl
ml/green/: convert_saved_model_tflite.py  data.py  data_test.py  get_original_data.py  green_capture_data.py  green_dataset_flip.py  model.tflite
ml/silver/: data.py
runtime_data/: green.tflite  silver.json  silver.tflite  victim.tflite
runtime_data/src/: errcodes.h  line.h  neural_networks.cc  robot.cc  robot.h  vision.h
scripts/: calibrate_camera.py  calibrate_camera_realtime (1).py  calibrate_camera_realtime.py  calibration_capture.py  capture_images.py  create_distance_weights.py  detect_silver_canny_edge.py  find_serial_number_of_attached_cameras.py  mimeograph_data.py  silver_test.py
scripts/camera_calibration/: calibration_capture.py
scripts/diy_voltmeter_attiny/: diy_voltmeter_attiny.ino
scripts/green_ml/: data.py  green.tflite  model.h5
scripts/green_test/: green_color_test.py  green_test.py  green_test_live.py  green_thresholding.py  line_test.py
scripts/ml/: convert_saved_model_tflite.py  data.py  find_perfect_houghCircles_params.py  green_capture_dara.py  green_dataset_flip.py  mimeograph_data.py  sort_datasets.py  test_houghCircles_params.py
scripts/rescue/: find_victim.py
scripts/rescue_kit_detection/: rescue_kit_detection.py
scripts/silver/: crop_test_images.py
scripts/silver_ml/: crop_data.py  data.py  data_test.py  model.h5  silver.tflite  silver_test.py
scripts/victim_ml/: analyze_bounding_boxes.py  circles.py  convert_csv.py  create_output.py  create_regions.py  out.csv  out_us.csv  upsample_data.py  victim_ml.py  victim_test.py  yolo.py  yolo_test.py
src/: bno055.cc  bno055.cpp  bno055.h  errcodes.h  errcodes.hpp  green_model.cc  green_model.h  green_nn.cc  green_nn.h  line (1).cc  line (1).h  line.cc  line.h  main (1).cc  main.cc  main.cpp  neural_networks.cc  neural_networks.h  rescue.cc  rescue.h  rescue_new.cc  rescue_new.h  rescue_old.cc  robot (1).cc  robot (1).h  robot.cc  robot.cpp  robot.h  robot.hpp  silver_ml.cc  silver_ml.h  test.cc  test.h  utils (1).cc  utils (1).h  utils.cc  utils.h  utils.hpp  victim_ml.cc  victim_ml.h  (+6 more)
tests/: test_camera.py  test_distance.py  test_gpio.py
(+940 files in other folders)
